--- a/blok.html
+++ b/blok.html
@@ -508,7 +508,6 @@ const stopBtn         = document.getElementById("stopBtn");
 const finishBtn       = document.getElementById("finishBtn");
 const questionContainer = document.getElementById("questionContainer");
 
-/* Global durum değişkenleri */
 let words = [];
 let currentIndex = 0;
 let timeoutId = null;
@@ -518,18 +517,17 @@ let quizPhase = "reading";
 let currentQuestions = [];
 let userAnswers = [];
 let questionsGenerated = false;
+let readyFileQuestions = [];  // sadece hazır metinler için
 
 const ANSWER_LETTERS = ["A","B","C","D","E"];
 
 /* ========= HAZIR METİNLERİ GİTHUB'DAN ÇEK ========= */
-/* KronosEgitim/HizliOkuma/Metinler klasöründen txt dosyalarını otomatik listele */
 async function populateReadyTexts(){
   const select = readyTextSelect;
   if(!select) return;
 
   select.innerHTML = '<option value="">Seçiniz</option>';
 
-  // DOĞRU REPO + DOĞRU KLASÖR
   const apiUrl = "https://api.github.com/repos/KronosEgitim/HizliOkuma/contents/Metinler";
 
   try{
@@ -556,7 +554,6 @@ async function populateReadyTexts(){
       .sort((a,b)=>a.name.localeCompare(b.name,"tr"))
       .forEach(item=>{
         const opt = document.createElement("option");
-        // download_url doğrudan ham txt içeriği
         opt.value = item.download_url;
         opt.textContent = item.name.replace(/\.txt$/i,"");
         select.appendChild(opt);
@@ -587,7 +584,6 @@ modeRadios.forEach(radio=>{
   });
 });
 
-/* Sayfa açılışında görünürlük + hazır metinler */
 (function initTextMode(){
   const selected = document.querySelector('input[name="textMode"]:checked');
   const val = selected ? selected.value : "ai";
@@ -601,7 +597,7 @@ modeRadios.forEach(radio=>{
   populateReadyTexts();
 })();
 
-/* Ortak "Metin Oluştur" butonu */
+/* Ortak "Metin Oluştur" */
 generateTextBtn.onclick = async function(){
   const selected = document.querySelector('input[name="textMode"]:checked');
   const selectedMode = selected ? selected.value : "ai";
@@ -641,6 +637,7 @@ async function generateTextFromAPI(){
   quizPhase = "reading";
   questionsGenerated = false;
   currentQuestions = [];
+  readyFileQuestions = [];
   userAnswers = [];
   finishBtn.style.display = "none";
   finishBtn.disabled = false;
@@ -696,6 +693,57 @@ En sonda kısa bir kapanış cümlesi yaz.
   }
 }
 
+/* ========= TXT İÇİNDEN SORU PARSE (HAZIR METİN) ========= */
+function parseQuestionsFromFile(raw){
+  const result = [];
+  if(!raw) return result;
+
+  const lines = raw
+    .split(/\r?\n/)
+    .map(l => l.trim())
+    .filter((l,idx,arr)=>true); // sadece trim
+
+  let i = 0;
+  while(i < lines.length){
+    // boş satırları atla
+    while(i < lines.length && !lines[i]) i++;
+    if(i >= lines.length) break;
+
+    const qLine = lines[i];
+    i++;
+
+    if(!qLine) continue;
+
+    // Şıklar
+    const opts = [];
+    while(i < lines.length && /^[A-Ea-e]\)/.test(lines[i])){
+      opts.push(lines[i]);
+      i++;
+    }
+
+    // Cevap satırı
+    let ans = null;
+    if(i < lines.length){
+      const m = lines[i].match(/^(Cevap|Cevap:|Doğru cevap|Dogru cevap|Answer)\s*[:\-]?\s*([A-Ea-e])/i);
+      if(m){
+        ans = m[2].toUpperCase();
+        i++;
+      }
+    }
+
+    if(opts.length === 5 && ans && ANSWER_LETTERS.includes(ans)){
+      result.push({
+        q: qLine.replace(/^\d+\)\s*/,"").trim(),
+        options: opts.map(t => t.replace(/^[A-Ea-e]\)\s*/, "").trim()),
+        answer: ans
+      });
+    }
+    // değilse, o bloğu atlıyoruz
+  }
+
+  return result;
+}
+
 /* ========= HAZIR METİN YÜKLE ========= */
 async function loadReadyText(){
   const sel = readyTextSelect.value;
@@ -714,6 +762,7 @@ async function loadReadyText(){
   quizPhase = "reading";
   questionsGenerated = false;
   currentQuestions = [];
+  readyFileQuestions = [];
   userAnswers = [];
   finishBtn.style.display = "none";
   finishBtn.disabled = false;
@@ -721,9 +770,24 @@ async function loadReadyText(){
   try{
     const res = await fetch(sel);
     const txt = await res.text();
-    rawText = txt;
+
+    // --- Metin / Soru ayrımı: -SORULAR- ---
+    const marker = "-SORULAR-";
+    let textPart = txt;
+    let questionsPart = "";
+
+    const idx = txt.indexOf(marker);
+    if(idx >= 0){
+      textPart = txt.slice(0, idx).trim();
+      questionsPart = txt.slice(idx + marker.length).trim();
+    }
+
+    rawText = textPart;           // okuma ve istatistik için sadece metin
+    readyFileQuestions = parseQuestionsFromFile(questionsPart); // sorular dosyadan
+
     loadText(rawText);
     calculateWordStats();
+
     generateStatus.innerText = "✅ Metin yüklendi.";
     generateStatus.style.color = "green";
   }catch(err){
@@ -758,7 +822,7 @@ function loadText(txt){
   });
 }
 
-/* ========= İSTATİSTİK HESAPLAMA ========= */
+/* ========= İSTATİSTİK ========= */
 timeInput.addEventListener("input", calculateWordStats);
 blockCountInput.addEventListener("input", calculateWordStats);
 
@@ -800,9 +864,22 @@ function showNextWord(){
     if(!questionsGenerated && quizPhase === "reading"){
       questionsGenerated = true;
       quizPhase = "questions";
+
       setTimeout(async ()=>{
-        await generateQuestionsForText();
-        renderQuestions();
+        const selected = document.querySelector('input[name="textMode"]:checked');
+        const selectedMode = selected ? selected.value : "ai";
+
+        if(selectedMode === "ai"){
+          // API'den soru üret
+          await generateQuestionsForText();
+          renderQuestions();
+        }else{
+          // HAZIR METİN: sorular txt dosyasından
+          currentQuestions = readyFileQuestions || [];
+          userAnswers = new Array(currentQuestions.length).fill(null);
+          renderQuestions();
+        }
+
         if(currentQuestions && currentQuestions.length){
           finishBtn.style.display = "inline-block";
           finishBtn.disabled = false;
@@ -994,8 +1071,6 @@ JSON formatı tam olarak şöyle olsun:
     });
 
     currentQuestions.forEach(q => shuffleOptionsAndFixAnswer(q));
-
-    renderQuestions();
 
   }catch(err){
     console.error(err);
